Fixing responsivity issues with contact page to ensure more people can use the website on mobile devices. Improved the footer of the pages.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,6 @@ html, body {
   font-weight: 500;
   height: 100px;
 }
-
 /* Style rules for the site logo present in the navigation bar */
 .site-logo{
   line-height: 10px;
@@ -63,7 +62,7 @@ html, body {
 
 /* Style the footer at the bottom of the page */
 .footer {
-  background-color: #f1f1f1;
+  background-color: #F38630;
   padding: 10px;
   margin-top: 15px;
   text-align: center;
@@ -71,6 +70,28 @@ html, body {
   font-size: 25px;
   color: black;
   bottom: 0;
+}
+footer i{
+  font-size: 150%;
+  margin: 5px;
+  padding: 0 20px;
+  color: black;
+}
+footer a:hover i{
+  transform: rotate(15deg) scale(1.7);
+  color: whitesmoke;
+}
+footer a:hover i.fa-youtube-square{
+  transform: rotate(-30deg) scale(1.7);
+}
+footer a:hover i.fa-twitter-square{
+  transform: rotate(-30deg) scale(1.7);
+}
+.text-centered{
+  text-align: center;
+}
+.page-title{
+  padding-left: 50px;
 }
 /* General CSS ends here */
   
@@ -86,7 +107,6 @@ html, body {
   padding: 15px;
   overflow: hidden;
 }
-
 /* Site title/logo specifically on the index page */
 #index-header{
   font-size: 70px;
@@ -171,35 +191,63 @@ html, body {
   }
   #contact-form-wrapper{
     width: 80%;
-    height: 500px;
-    margin: 0 auto;
+    height: 800px;
+    margin: 30px auto 25px auto;
     bottom: 50%;
     border: black 1px solid;
     background-color: #E0E4CC;
-    padding: 10px 0px 0px 100px;
+    padding: 30px 0px 0px 100px;
   }
   .contact-form-input{
-    width: 300px;
+    max-width: 300px;
+    width: 100%;
+    display: block;
+  }
+  input.contact-form-input{
     padding-left: 25px;
+    font-size: 18px;
+    height: 30px;
   }
   #submit{
-    margin-bottom: 50px;
+    border-radius: 15px;
+    height: 50px;
+    padding: 10px 15px;
+    margin: 20px auto;
+    width: auto;
+    background: #F38630;
+    color: black;
+    border: 1px solid gray;
+    box-shadow: none;
   }
-  #contact-form label{
-    font-size: 12px;
-    padding-right: 0px;
+  #submit:hover{
+    color: #565656;
+    background: #f9b27a;
+  }
+
+  label.contact-form-input{
+    font-size: 18px;
+    padding: 10px 0 0 0;
+    display: block;
+    height: auto;
   }
   textarea{
     resize: none;
     width: 300px;
+    font-size: 18px;
+    padding-left: 20px;
   }
   #consent{
-    width: 10px;
+    width: 20px;
+    height: 20px;
     padding: 0;
-    margin: 0;
+    margin: 0 10px 0 0;
+    display: inline-block;
+  }
+  .contact-form-input.checkbox{
+    display: inline-block;
   }
   #privacy-policy{
-    width: 44%;
+    width: 49%;
     height: 300px;
     border: 1px solid black;
     padding: 10px;
@@ -258,11 +306,13 @@ html, body {
       margin: 0 auto 25px auto;
     }
     #contact-form-wrapper{
-      height: 800px;
+      height:fit-content;
+      padding: 5%;
     }
     #privacy-policy{
       float: none;
-      width: 80%
+      width: 80%;
+      margin: 0 auto;
     }
     .contact-form-wrapper{
       padding-left: 10px;
@@ -282,12 +332,36 @@ html, body {
       height: fit-content;
       text-align: center;
     }
-    .instagram-style{
+    #instagram-style{
       width: 100%;
       text-align: center;
       padding: 0;
       margin: 0;
       min-width: 0;
+    }
+    form#contact-form{
+      width: 100%;
+      margin: 0 auto;
+      text-align: center;
+    }
+    .contact-form-input{
+      margin: 0 auto;
+      display: block;
+    }
+    input.contact-form-input{
+      font-size: 24px;
+      height: 46px;
+      width: 100%;
+      margin: 0 auto;
+      display: block;
+    }
+    #submit{
+      height: 60px;
+      width: 70%;
+    }
+    label.contact-form-input{
+      font-size: 24px;
+      text-align: center;
     }
   }
     /* For phones and small screens */
@@ -312,6 +386,9 @@ html, body {
         height: 80%;
         margin: 0 auto;
         object-fit: cover;
+      }
+      .instagram-style{
+        margin: 0 auto;
       }
     }
   /* End of responsive CSS */
